--- a/intercom_flutter/example/android/app/build.gradle
+++ b/intercom_flutter/example/android/app/build.gradle
@@ -52,6 +52,15 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    compileOptions {
+      sourceCompatibility JavaVersion.VERSION_1_8
+      targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+      jvmTarget = '1.8'
+    }
 }
 
 flutter {
@@ -59,5 +68,5 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
