--- a/intercom_flutter_web/pubspec.yaml
+++ b/intercom_flutter_web/pubspec.yaml
@@ -1,6 +1,6 @@
 name: intercom_flutter_web
 description: Web platform implementation of intercom_flutter
-version: 1.0.2
+version: 1.1.0
 homepage: https://github.com/v3rm0n/intercom_flutter
 
 flutter:
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   intercom_flutter_platform_interface: ^2.0.0
   uuid: ^4.2.1 # to get the random uuid for loginUnidentifiedUser in web
+  web: '>=0.3.0 <0.6.0'
 
 dev_dependencies:
   flutter_test:
@@ -24,5 +25,5 @@ dev_dependencies:
   mockito: ^5.4.0
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.2.0 <4.0.0"
   flutter: ">=3.10.0"
