--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,5 +117,10 @@ jobs:
 
     # Run all integration tests
     - name: Run integration tests
-      run: flutter drive -d web-server --browser-name=chrome --driver=test_driver/integration_test.dart --target=integration_test/intercom_flutter_web_test.dart
+      run: flutter drive \
+        -d chrome \
+        --driver=test_driver/integration_test.dart \
+        --target=integration_test/intercom_flutter_web_test.dart \
+        --web-renderer=html \
+        --headless
       working-directory: ${{env.source-directory}}
